gateway/global.yaml
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: default-http-to-https
spec:
  servers:
    - hosts:
        - '*'
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
  selector:
    app: istio-ingressgateway
---
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: https-gateway
spec:
  servers:
    - hosts:
        - '*.xquare.app'
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: xquare.app
        mode: SIMPLE
  selector:
    app: istio-ingressgateway
