gateway/argocd.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: argocd-server
  namespace: istio-system
spec:
  gateways:
    - xquare-gateway
  hosts:
    - 'argo.xquare.app'
  http:
  - route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: kiali-server
  namespace: istio-system
spec:
  gateways:
    - xquare-gateway
  hosts:
    - 'kiali.xquare.app'
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 80
